F/BoardHeader/z-index fix

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -47,3 +47,7 @@ object {
 a.active {
   text-decoration: overline;
 }
+
+.monday-style-dialog-content-wrapper {
+  z-index: 10;
+}
